# webots-sim

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  uscs-drone-patrol(telemetry).html  uscs-drone-patrol.html  webots.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  documentation.yml  feature_request.yml  task.yml
.github/workflows/: ci.yaml
backend/: requirements.txt  seed_db.py
backend/app/: db.py  exception_router.py  init_db.py  main.py  models.py  scan_router.py  warehouse.db
backend/app/services/: location_mapper.py  report_service.py  scan_service.py
backend/tests/: test_scans.py
docs/: navigation_overview.md
docs/architecture/: component_diagram.puml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
simulator/: auto_patrol.py  drone_controller.py  drone_state.py  mavic2pro_patrol.py  requirements.txt  scanned_barcodes.txt  telemetry.json  telemetry_server.py  utils.py  waypoint_planner.py  webots_setup.py
simulator/world/: Dockerfile
simulator/world/worlds/: .Re_edit31.wbproj  .uscs_cold_storage.wbproj  (+4 more)
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_package/: CMakeLists.txt  my_robot_driver.xml
src/my_package/autopilot_controller/: log.txt  mavic_driver.py
src/my_package/include/my_package/: MyRobotDriver.hpp
src/my_package/my_package/: mavic_driver.py
src/my_package/resource/: mavic_webots.urdf
src/my_package/src/: autopilot_node.cpp
src/my_package/worlds/: wharehouse.wbt
(+633 files in other folders)
